Fix glitches and clean code